# dlang

./: .gitignore  CMakeLists.txt  LICENSE  main.cpp
.libdlang/dlang/: dictionary.libx  iostream.libc  list.libx  string.libx
include/: dictionary.hpp  iostream.hpp  istream.hpp  list.hpp  ostream.hpp  string.hpp  utils.hpp
source/: iostream.cpp  istream.cpp  ostream.cpp  string.cpp
