CMAKE_MINIMUM_REQUIRED(VERSION 4.2) #I use CMake 4.2.2
PROJECT(dlang CXX)


SET(CMAKE_CXX_STANDARD
    26) #C++26
SET(CMAKE_CXX_STANDARD_REQUIRED
    ON)
SET(CMAKE_CXX_SCAN_FOR_MODULES
    OFF)


INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/include)


FILE(GLOB_RECURSE      Headers
     CONFIGURE_DEPENDS ${CMAKE_SOURCE_DIR}/include/*.hpp) #search for header (hpp) files
FILE(GLOB_RECURSE      Sources
     CONFIGURE_DEPENDS ${CMAKE_SOURCE_DIR}/source/*.cpp) #search for source (cpp) files


SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/bin)
SET(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/libcx)


ADD_LIBRARY(dlang SHARED ${Sources})
TARGET_INCLUDE_DIRECTORIES(dlang PUBLIC ${CMAKE_SOURCE_DIR}/include)


ADD_EXECUTABLE(bindlang main.cpp)
TARGET_LINK_LIBRARIES(bindlang PRIVATE dlang)
SET_TARGET_PROPERTIES(bindlang PROPERTIES
                      LINK_FLAGS "-Wl,-rpath,'$ORIGIN/../libcx'")